test(ddd-kitchenpos): refactor product fixture and test