@@ -1,19 +1,22 @@
 package kitchenpos.application;
 
+import static fixture.ProductFixture.*;
 import static org.assertj.core.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 import java.math.BigDecimal;
 import java.util.Collections;
+import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
-import java.util.UUID;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.NullSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -40,40 +43,21 @@ class ProductServiceTest {
 	@InjectMocks
 	private ProductService productService;
 
-	private Product validProduct;
-
-	@BeforeEach
-	void setUp() {
-		validProduct = ProductFixture.createValidProduct();
-	}
-
 	@Nested
 	class create {
-		@Test
-		@DisplayName("상품 생성 시 가격이 null이면 상품 생성을 할 수 없다")
-		void createProductWithNullPrice() {
+		@ParameterizedTest
+		@NullSource
+		@ValueSource(strings = {"-1"})
+		@DisplayName("상품 생성 시 가격이 null이거나 0미만이면 상품 생성을 할 수 없다")
+		void createProductWithNullPrice(BigDecimal price) {
 			// given
-			validProduct.setPrice(null);
+			Product invalidPricedProduct = ProductFixture.create(VALID_PRODUCT_NAME, price);
 
 			// then
 			assertThatExceptionOfType(IllegalArgumentException.class)
 				.isThrownBy(() ->
 					// when
-					productService.create(validProduct)
-				);
-		}
-
-		@Test
-		@DisplayName("상품 생성 시 가격이 0 미만이면 상품 생성을 할 수 없다")
-		void createProductWithNegativePrice() {
-			// given
-			validProduct.setPrice(BigDecimal.valueOf(-1));
-
-			// then
-			assertThatExceptionOfType(IllegalArgumentException.class)
-				.isThrownBy(() ->
-					// when
-					productService.create(validProduct)
+					productService.create(invalidPricedProduct)
 				);
 		}
 
@@ -81,13 +65,13 @@ class ProductServiceTest {
 		@DisplayName("상품 생성 시 상품명이 null이면 상품 생성을 할 수 없다")
 		void createProductWithNullName() {
 			// given
-			validProduct.setName(null);
+			Product nullNamedProduct = ProductFixture.create(null, BigDecimal.TEN);
 
 			// then
 			assertThatExceptionOfType(IllegalArgumentException.class)
 				.isThrownBy(() ->
 					// when
-					productService.create(validProduct)
+					productService.create(nullNamedProduct)
 				);
 		}
 
@@ -95,14 +79,16 @@ class ProductServiceTest {
 		@DisplayName("상품 생성 시 상품명에 비속어가 포함되어 있으면 상품 생성을 할 수 없다")
 		void createProductWithProfaneName() {
 			// given
-			when(purgomalumClient.containsProfanity("비속어")).thenReturn(true);
-			validProduct.setName("비속어");
+			String productNameWithProfanity = "비속어";
+			Product productWithProfanity = ProductFixture.create(productNameWithProfanity, BigDecimal.TEN);
+
+			when(purgomalumClient.containsProfanity(productNameWithProfanity)).thenReturn(true);
 
 			// then
 			assertThatExceptionOfType(IllegalArgumentException.class)
 				.isThrownBy(() ->
 					// when
-					productService.create(validProduct)
+					productService.create(productWithProfanity)
 				);
 		}
 
@@ -110,45 +96,34 @@ class ProductServiceTest {
 		@DisplayName("상품 생성을 할 수 있다")
 		void createProductSuccessfully() {
 			// given
+			Product validProduct = ProductFixture.create(VALID_PRODUCT_NAME, VALID_PRODUCT_PRICE);
 			when(productRepository.save(any(Product.class))).thenReturn(validProduct);
 
 			// when
-			Product created = productService.create(validProduct);
+			Product createdProduct = productService.create(validProduct);
 
 			// then
-			assertThat(created).isNotNull();
-			assertThat(created.getName()).isEqualTo(validProduct.getName());
-			assertThat(created.getPrice()).isEqualTo(validProduct.getPrice());
+			assertThat(createdProduct).isNotNull();
+			assertThat(createdProduct.getName()).isEqualTo(validProduct.getName());
+			assertThat(createdProduct.getPrice()).isEqualTo(validProduct.getPrice());
 		}
 	}
 
 	@Nested
 	class changePrice {
-		@Test
-		@DisplayName("상품 가격 변경 시 가격이 null이면 상품 가격 변경을 할 수 없다")
-		void changePriceWithNullPrice() {
+		@ParameterizedTest
+		@NullSource
+		@ValueSource(strings = {"-1"})
+		@DisplayName("상품 가격 변경 시 가격이 null이거나 0 미만이면 상품 가격 변경을 할 수 없다")
+		void changePriceWithNullPrice(BigDecimal price) {
 			// given
-			validProduct.setPrice(null);
+			Product invalidPricedProduct = ProductFixture.create(VALID_PRODUCT_NAME, price);
 
 			// then
 			assertThatExceptionOfType(IllegalArgumentException.class)
 				.isThrownBy(() ->
 					// when
-					productService.changePrice(UUID.randomUUID(), validProduct)
-				);
-		}
-
-		@Test
-		@DisplayName("상품 가격 변경 시 가격이 0 미만이면 상품 가격 변경을 할 수 없다")
-		void changePriceWithNegativePrice() {
-			// given
-			validProduct.setPrice(BigDecimal.valueOf(-1));
-
-			// then
-			assertThatExceptionOfType(IllegalArgumentException.class)
-				.isThrownBy(() ->
-					// when
-					productService.changePrice(UUID.randomUUID(), validProduct)
+					productService.changePrice(invalidPricedProduct.getId(), invalidPricedProduct)
 				);
 		}
 
@@ -156,13 +131,14 @@ class ProductServiceTest {
 		@DisplayName("상품 가격 변경 시 상품 조회가 실패하면 상품 가격 변경을 할 수 없다")
 		void changePriceWithNonExistentProduct() {
 			// given
-			when(productRepository.findById(any(UUID.class))).thenReturn(Optional.empty());
+			Product nonExistentProduct = ProductFixture.create(VALID_PRODUCT_NAME, VALID_PRODUCT_PRICE);
+			when(productRepository.findById(nonExistentProduct.getId())).thenReturn(Optional.empty());
 
 			// then
 			assertThatExceptionOfType(NoSuchElementException.class)
 				.isThrownBy(() ->
 					// when
-					productService.changePrice(UUID.randomUUID(), validProduct)
+					productService.changePrice(nonExistentProduct.getId(), nonExistentProduct)
 				);
 		}
 
@@ -170,27 +146,36 @@ class ProductServiceTest {
 		@DisplayName("상품 가격 변경 시 해당 상품이 메뉴에 등록되어 있지 않으면 상품의 가격을 변경할 수 있다")
 		void changePriceWithoutMenus() {
 			// given
-			when(productRepository.findById(any(UUID.class))).thenReturn(Optional.of(validProduct));
-			when(menuRepository.findAllByProductId(validProduct.getId())).thenReturn(Collections.emptyList());
+			Product productNotRegisteredInMenu = ProductFixture.create(VALID_PRODUCT_NAME, VALID_PRODUCT_PRICE);
+
+			when(productRepository.findById(productNotRegisteredInMenu.getId())).thenReturn(
+				Optional.of(productNotRegisteredInMenu));
+			when(menuRepository.findAllByProductId(productNotRegisteredInMenu.getId())).thenReturn(
+				Collections.emptyList());
 
 			// when
-			Product updated = productService.changePrice(validProduct.getId(), validProduct);
+			Product updatedProduct = productService.changePrice(productNotRegisteredInMenu.getId(),
+				productNotRegisteredInMenu);
 
 			// then
-			assertThat(updated).isNotNull();
-			assertThat(updated.getPrice()).isEqualTo(validProduct.getPrice());
+			assertThat(updatedProduct).isNotNull();
+			assertThat(updatedProduct.getPrice()).isEqualTo(productNotRegisteredInMenu.getPrice());
 		}
 
 		@Test
-		@DisplayName("상품 가격 변경 시 메뉴 가격이 상품 가격 합계보다 높을 때 해당 상품의 메뉴가 비노출 처리된다")
+		@DisplayName("상품 가격 변경 시 상품들의 가격 합계가 메뉴가 가격보다 낮을 때 해당 상품의 메뉴가 비노출 처리된다")
 		void changePriceMenuPriceHigher() {
 			// given
-			when(productRepository.findById(any(UUID.class))).thenReturn(Optional.of(validProduct));
-			Menu menu = MenuFixture.createValidMenuWithPrice(BigDecimal.valueOf(20));
-			when(menuRepository.findAllByProductId(any(UUID.class))).thenReturn(Collections.singletonList(menu));
+			Product productWithPriceLowerThanMenuPrice = ProductFixture.create(VALID_PRODUCT_NAME, VALID_PRODUCT_PRICE);
+
+			when(productRepository.findById(productWithPriceLowerThanMenuPrice.getId()))
+				.thenReturn(Optional.of(productWithPriceLowerThanMenuPrice));
+			Menu menu = MenuFixture.create(VALID_PRODUCT_PRICE.add(BigDecimal.TEN));
+			when(menuRepository.findAllByProductId(productWithPriceLowerThanMenuPrice.getId()))
+				.thenReturn(Collections.singletonList(menu));
 
 			// when
-			productService.changePrice(validProduct.getId(), validProduct);
+			productService.changePrice(productWithPriceLowerThanMenuPrice.getId(), productWithPriceLowerThanMenuPrice);
 
 			// then
 			assertThat(menu.isDisplayed()).isFalse();
@@ -200,9 +185,11 @@ class ProductServiceTest {
 		@DisplayName("상품 가격 변경 시 메뉴 가격이 상품 가격 합계와 같을 때 해당 상품의 메뉴가 노출 처리된다")
 		void changePriceMenuPriceEqual() {
 			// given
-			when(productRepository.findById(any(UUID.class))).thenReturn(Optional.of(validProduct));
-			Menu menu = MenuFixture.createValidMenuWithPrice(BigDecimal.TEN);
-			when(menuRepository.findAllByProductId(any(UUID.class))).thenReturn(Collections.singletonList(menu));
+			Product validProduct = ProductFixture.create(VALID_PRODUCT_NAME, VALID_PRODUCT_PRICE);
+
+			when(productRepository.findById(validProduct.getId())).thenReturn(Optional.of(validProduct));
+			Menu menu = MenuFixture.create(BigDecimal.TEN);
+			when(menuRepository.findAllByProductId(validProduct.getId())).thenReturn(Collections.singletonList(menu));
 
 			// when
 			productService.changePrice(validProduct.getId(), validProduct);
@@ -231,7 +218,10 @@ class ProductServiceTest {
 		@DisplayName("상품 데이터가 비어 있지 않을 때 모든 상품을 조회하면 모든 상품을 조회할 수 있다")
 		void findAllProductsWhenNotEmpty() {
 			// given
-			when(productRepository.findAll()).thenReturn(Collections.singletonList(validProduct));
+			Product validProduct = ProductFixture.create(VALID_PRODUCT_NAME, VALID_PRODUCT_PRICE);
+			Product anotherProduct = ProductFixture.create("불고기버거", BigDecimal.TEN);
+
+			when(productRepository.findAll()).thenReturn(List.of(validProduct, anotherProduct));
 
 			// when
 			var products = productService.findAll();
@@ -239,6 +229,7 @@ class ProductServiceTest {
 			// then
 			assertThat(products).isNotEmpty();
 			assertThat(products.getFirst()).isEqualTo(validProduct);
+			assertThat(products.getLast()).isEqualTo(anotherProduct);
 		}
 	}
 
